# AlgoImages_TP

./: .gitignore  README.md
src/TP1/: CMakeLists.txt
src/TP1/cours/: Fourier.md  filtrage.md
src/TP1/include/: CImg.h  Distance.h  EuclidianDistance.h  KFCM.h  Kernel.h  PeronaMalik.h
src/TP1/sample/: KFCM.cpp  MyMain.cpp  main.cpp
src/TP1/source/: main.cpp
